# spatix

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  ROADMAP-DATA-PLATFORM.md
.github/workflows/: publish-mcp.yml
backend/: Dockerfile  database.py  main.py  requirements.txt  seed_datasets.py  trigger.txt
backend/api/: __init__.py  api_keys.py  contributions.py  datasets.py  geocode.py  maps.py  nlp_maps.py  normalize.py  spatial.py
backend/migrations/: 002_auth_tables.sql
backend/routers/: auth.py
backend/services/: email.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
frontend/app/account/: page.tsx
frontend/app/account/maps/: page.tsx
frontend/app/agent/[id]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/datasets/: page.tsx
frontend/app/developers/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/maps/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: DrawingToolbar.tsx  HeroMap.tsx  IconPicker.tsx  LabelSettings.tsx  LayerPanel.tsx  MapCanvas.tsx  MapEditor.tsx  MapPreview.tsx  MapViewer.tsx  Navbar.tsx  StyleEditor.tsx  TextAnnotationEditor.tsx  UploadZone.tsx  types.ts
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts  firebase.ts  mapUtils.ts
frontend/public/: embed.js  robots.txt
frontend/types/: deck.gl.d.ts  mapbox-gl-draw.d.ts
mcp-server/: LICENSE  README.md  pyproject.toml  server.py
mcp-server/spatix_mcp/: __init__.py
skill/: SKILL.md
(+4 files in other folders)
