[project]
name = "spatix-mcp"
version = "0.1.0"
description = "MCP server for Spatix — create maps, geocode, and work with spatial data"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
spatix-mcp = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
